# barrage-project

./: .env.example  .gitignore  Cargo.toml
migrations/2022-07-27-085934_crate_users/: down.sql  up.sql
migrations/2022-07-28-065032_create_product/: up.sql
migrations/2022-08-09-113833_create_orders/: up.sql
migrations/2022-08-09-114259_create_order_items/: up.sql
src/: main.rs  schema.rs
src/errors/: mod.rs
src/jwt/: mod.rs
src/models/: cart.rs  mod.rs  order.rs  order_item.rs  product.rs  user.rs
src/routes/: mod.rs
src/routes/cart/: add.rs  empty.rs  get.rs  mod.rs
src/routes/carts/: add.rs  empty.rs  get.rs
src/routes/orders/: add.rs
src/routes/products/: add.rs  all.rs  mod.rs  single.rs
src/routes/users/: delete.rs  get.rs  index.rs  login.rs  logout.rs  mod.rs  register.rs  update.rs
src/utils/: mod.rs
